Cabal-Version: 2.2
Name: p4p-common
Version: 0.0
Build-Type: Simple
License: AGPL-3.0-or-later
Copyright: 2020 Web3 Foundation <research@web3.foundation>
Author: Ximin Luo <infinity0@pwned.gg>
Maintainer: infinity0@pwned.gg
Stability: alpha
Homepage: https://github.com/w3f/hs-p4p
Bug-Reports: https://github.com/w3f/hs-p4p/issues
Synopsis: peer-for-peer library, common utilities
Description: Common utilities that should be exported to other libraries.
Category: Network, P2P, Common
Tested-With: GHC >= 8.10.1

Source-Repository head
  Type: git
  Location: https://github.com/w3f/hs-p4p

Flag dev
  Description: Set compile flags for development
  Default:     False
  Manual:      True

Common generic
  Default-Language: Haskell2010
  Build-Depends: base >= 4 && < 5,
  GHC-Options:
    -Wall
    -Wcompat
    -Wno-unused-matches
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
  if flag(dev)
    GHC-Options:
      -Werror
      -O2
    -- some optimisations cause memory leaks; switch on -O2 and profiling so we
    -- can detect this during development so it doesn't cause surprises later
    GHC-Prof-Options:
      -fprof-auto

Library
  Import: generic
  Build-Depends:
      extra
    , lens
    , mutable-lens
    , template-haskell
    -- Crypto.*
    , bytestring
    , cryptonite
    , deepseq
    , memory
    -- Control.Monad.*
    , mtl
    , transformers
    -- Data.*
    , containers
    -- Control.Concurrent.Async
    , async
    , stm
  HS-Source-Dirs: src
  Exposed-Modules:
    Control.Concurrent.Async.Extra
    Control.Lens.Extra
    Control.Lens.TH.Extra
    Control.Monad.Compat.Extra
    Control.Monad.Trans.Except.Extra
    Crypto.Cipher.ChaCha.Extra
    Crypto.Random.Extra
    Data.Map.Bounded
    Data.Sequence.Extra
    Data.Type.Reflect

Test-Suite doctests
  Import: generic
  GHC-Options: -threaded
  Build-Depends:
      doctest
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: DocTests.hs

Test-Suite unit
  Import: generic
  GHC-Options: -threaded
  Build-Depends:
      tasty
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: UnitTests.hs
