Cabal-Version: 2.2
Name: p4p-proc
Version: 0.0
Build-Type: Simple
License: AGPL-3.0-or-later
Copyright: 2020 Web3 Foundation <research@web3.foundation>
Author: Ximin Luo <infinity0@pwned.gg>
Maintainer: infinity0@pwned.gg
Stability: alpha
Homepage: https://github.com/w3f/hs-p4p
Bug-Reports: https://github.com/w3f/hs-p4p/issues
Synopsis: peer-for-peer library, pure process abstractions
Description: TODO
Category: Network, P2P, Process
Tested-With: GHC >= 8.10.1

Source-Repository head
  Type: git
  Location: https://github.com/w3f/hs-p4p

Flag dev
  Description: Set compile flags for development
  Default:     False
  Manual:      True

Common generic
  Default-Language: Haskell2010
  Build-Depends: base >= 4 && < 5,
  GHC-Options:
    -Wall
    -Wcompat
    -Wno-unused-matches
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
  if flag(dev)
    GHC-Options:
      -Werror
      -O2
    -- some optimisations cause memory leaks; switch on -O2 and profiling so we
    -- can detect this during development so it doesn't cause surprises later
    GHC-Prof-Options:
      -fprof-auto

Library
  Import: generic
  Build-Depends:
      lens
    , mutable-lens (>= 0.3)
    , mtl
    , op
    , primitive
    , schedule
    -- P4P.Proc.Util.FlowControl
    , containers
  HS-Source-Dirs: src
  Exposed-Modules:
    P4P.Proc
    P4P.Proc.Lens
    P4P.Proc.Internal
    P4P.Proc.Instances
    P4P.Proc.Util.FlowControl

Test-Suite doctests
  Import: generic
  GHC-Options: -threaded
  Build-Depends:
      doctest
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: DocTests.hs

Test-Suite unit
  Import: generic
  GHC-Options: -threaded
  Build-Depends:
      tasty
    , tasty-hunit
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: UnitTests.hs
  Other-Modules:
      P4P.Proc.UnitTests
