Cabal-Version: 2.2
Name: p4p-protocol-dht-kad
Version: 0.0
Build-Type: Simple
License: AGPL-3.0-or-later
Copyright: 2020 Web3 Foundation <research@web3.foundation>
Author: Ximin Luo <infinity0@pwned.gg>
Maintainer: infinity0@pwned.gg
Stability: alpha
Homepage: https://github.com/infinity0/hs-p4p
Bug-Reports: https://github.com/infinity0/hs-p4p/issues
Synopsis: peer-for-peer library, kademlia DHT protocol
Description: Implementation of Kademlia DHT protocol and related.
Category: Network, P2P, DHT
Tested-With: GHC >= 8.10.1

Source-Repository head
  Type: git
  Location: https://github.com/infinity0/hs-p4p

Flag dev
  Description: Set compile flags for development
  Default:     False
  Manual:      True

Common generic
  Default-Language: Haskell2010
  Build-Depends: base >= 4 && < 5,
  GHC-Options:
    -Wall
    -Wcompat
    -Wno-unused-matches
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
  if flag(dev)
    GHC-Options:
      -Werror
      -O2
    -- some optimisations cause memory leaks; switch on -O2 and profiling so we
    -- can detect this during development so it doesn't cause surprises later
    GHC-Prof-Options:
      -fprof-auto

Library
  Import: generic
  Build-Depends:
      p4p-common
    , p4p-proc
    , bytestring
    , containers
    , extra
    , lens
    , safe
    , schedule
    , transformers
    , vector
  HS-Source-Dirs: src
  Exposed-Modules:
    P4P.Protocol.DHT.Kademlia
    P4P.Protocol.DHT.Kademlia.Command
    P4P.Protocol.DHT.Kademlia.Internal
    P4P.Protocol.DHT.Kademlia.Message
    P4P.Protocol.DHT.Kademlia.Request
    P4P.Protocol.DHT.Kademlia.State
    P4P.Protocol.DHT.Kademlia.Types

Test-Suite doctests
  Import: generic
  GHC-Options: -threaded
  Build-Depends:
      doctest
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: DocTests.hs

Test-Suite unit
  Import: generic
  GHC-Options: -threaded
  Build-Depends:
      p4p-protocol-dht-kad
    , p4p-common
    , bytestring
    , transformers
    , tasty
    , tasty-hunit
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: UnitTests.hs
  Other-Modules:
    P4P.Protocol.DHT.Kademlia.UnitTests
