Cabal-Version: 2.2
Name: p4p-protocol-dht-kad
Version: 0.0
Build-Type: Simple
License: AGPL-3.0-or-later
Copyright: 2020 Web3 Foundation <research@web3.foundation>
Author: Ximin Luo <infinity0@pwned.gg>
Maintainer: infinity0@pwned.gg
Stability: alpha
Homepage: https://github.com/w3f/hs-p4p
Bug-Reports: https://github.com/w3f/hs-p4p/issues
Synopsis: peer-for-peer library, kademlia DHT protocol
Description: Implementation of Kademlia DHT protocol and related.
Category: Network, P2P, DHT
Tested-With: GHC >= 8.10.1

Source-Repository head
  Type: git
  Location: https://github.com/w3f/hs-p4p

-- begin common stanzas
Flag dev
  Description:
    Set compile flags for development.
  Default:     False
  Manual:      True

Flag release
  Description:
    Set compile flags for release-checking. Users don't need this.
  Default:     False
  Manual:      True

Common generic
  Default-Language: Haskell2010
  Build-Depends: base >= 4 && < 5,
  GHC-Options:
    -Wall
    -Wcompat
    -Wno-unused-matches
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
  if flag(dev)
    GHC-Options:
      -O2
    -- some optimisations cause memory leaks; switch on -O2 and profiling so we
    -- can detect this during development so it doesn't cause surprises later
    GHC-Prof-Options:
      -fprof-auto
    -- note: blanket-adding -fprof-auto like this can very occasionally give
    -- memory leaks; disable those on a per-module basis.
  if flag(release)
    GHC-Options:
      -Werror

Common executable
  GHC-Options:
    -threaded
  if flag(dev)
    GHC-Options:
      -rtsopts
-- end common stanzas

Library
  Import: generic
  Build-Depends:
      p4p-common
    , p4p-proc
    , bytestring
    , containers
    , extra
    , lens
    , safe
    , schedule
    , transformers
    , vector
--    , pretty-simple
  HS-Source-Dirs: src
  Exposed-Modules:
    P4P.Protocol.DHT.Kademlia
    P4P.Protocol.DHT.Kademlia.Command
    P4P.Protocol.DHT.Kademlia.Internal
    P4P.Protocol.DHT.Kademlia.Message
    P4P.Protocol.DHT.Kademlia.Request
    P4P.Protocol.DHT.Kademlia.State
    P4P.Protocol.DHT.Kademlia.Types

Test-Suite doctests
  Import: generic, executable
  Build-Depends:
      doctest
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: DocTests.hs

Test-Suite unit
  Import: generic, executable
  Build-Depends:
      p4p-protocol-dht-kad
    , p4p-common
    , bytestring
    , transformers
    , tasty
    , tasty-hunit
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: UnitTests.hs
  Other-Modules:
    P4P.Protocol.DHT.Kademlia.UnitTests
