Cabal-Version: 2.2
Name: p4p-sim-experiments
Version: 0.0
Build-Type: Simple
License: AGPL-3.0-or-later
Copyright: 2020 Web3 Foundation <research@web3.foundation>
Author: Ximin Luo <infinity0@pwned.gg>
Maintainer: infinity0@pwned.gg
Stability: alpha
Homepage: https://github.com/w3f/hs-p4p
Bug-Reports: https://github.com/w3f/hs-p4p/issues
Synopsis: peer-for-peer library, simulation experiments
Description: Research-level network experiments conducted on p4p-sim
Category: Network, P2P, Simulation, Experiments
Tested-With: GHC >= 8.10.1

Source-Repository head
  Type: git
  Location: https://github.com/w3f/hs-p4p

-- begin common stanzas
Flag dev
  Description:
    Set compile flags for development.
  Default:     False
  Manual:      True

Flag release
  Description:
    Set compile flags for release-checking. Users don't need this.
  Default:     False
  Manual:      True

Common generic
  Default-Language: Haskell2010
  Build-Depends: base >= 4 && < 5,
  GHC-Options:
    -Wall
    -Wcompat
    -Wno-unused-matches
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
  if flag(dev)
    GHC-Options:
      -O2
    -- some optimisations cause memory leaks; switch on -O2 and profiling so we
    -- can detect this during development so it doesn't cause surprises later
    GHC-Prof-Options:
      -fprof-auto
    -- note: blanket-adding -fprof-auto like this can very occasionally give
    -- memory leaks; disable those on a per-module basis.
  if flag(release)
    GHC-Options:
      -Werror

Common executable
  GHC-Options:
    -threaded
  if flag(dev)
    GHC-Options:
      -rtsopts
-- end common stanzas

Executable sim-kad
  Import: generic, executable
  Build-Depends:
      p4p-sim
    , p4p-proc
    , p4p-protocol-dht-kad
    , p4p-common
    , containers
    , lens
    , op
    , transformers
  HS-Source-Dirs: app
  Main-Is: SimKad.hs
