Cabal-Version: 2.2
Name: p4p-zero
Version: 0.0
Build-Type: Simple
License: AGPL-3.0-or-later
Copyright: 2020 Web3 Foundation <research@web3.foundation>
Author: Ximin Luo <infinity0@pwned.gg>
Maintainer: infinity0@pwned.gg
Stability: alpha
Homepage: https://github.com/w3f/hs-p4p
Bug-Reports: https://github.com/w3f/hs-p4p/issues
Synopsis: peer-for-peer library, empty example package
Description: This package is a template for other P4P packages.
Category: Network, P2P, Example
Tested-With: GHC >= 8.10.1

Source-Repository head
  Type: git
  Location: https://github.com/w3f/hs-p4p

-- begin common stanzas
Flag dev
  Description:
    Set compile flags for development.
  Default:     False
  Manual:      True

Flag release
  Description:
    Set compile flags for release-checking. Users don't need this.
  Default:     False
  Manual:      True

Common generic
  Default-Language: Haskell2010
  Build-Depends: base >= 4 && < 5,
  GHC-Options:
    -Wall
    -Wcompat
    -Wno-unused-matches
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
  if flag(dev)
    GHC-Options:
      -O2
    -- some optimisations cause memory leaks; switch on -O2 and profiling so we
    -- can detect this during development so it doesn't cause surprises later
    GHC-Prof-Options:
      -fprof-auto
    -- note: blanket-adding -fprof-auto like this can very occasionally give
    -- memory leaks; disable those on a per-module basis.
  if flag(release)
    GHC-Options:
      -Werror

Common executable
  GHC-Options:
    -threaded
  if flag(dev)
    GHC-Options:
      -rtsopts
-- end common stanzas

Library
  Import: generic
  Build-Depends:
  HS-Source-Dirs: src
  Exposed-Modules:
    P4P.Zero

Test-Suite doctests
  Import: generic, executable
  Build-Depends:
      doctest
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: DocTests.hs

Test-Suite unit
  Import: generic, executable
  Build-Depends:
      tasty
--    , tasty-quickcheck
--    , tasty-hunit
  HS-Source-Dirs: test
  Type: exitcode-stdio-1.0
  Main-Is: UnitTests.hs
